--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>
+    <!--<script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>-->
   </body>
 </html>
