Deixando o layout responsivo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>desafio_frontend</title>
   </head>
-  <body>
+  <body style="background-color: #d2d2d2!important">
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!--<script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script>-->
